--- a/Web/static/css/main.css
+++ b/Web/static/css/main.css
@@ -2700,7 +2700,7 @@ a.poll-retract-vote {
 }
 
 .verticalGrayTabsWrapper {
-    width: 25.5%;
+    width: 158px;
     border-top: 1px solid #E5E7E6;
     border-left: 1px solid #d8d8d8;
     scrollbar-width: none;
