--- a/Web/static/css/audios.css
+++ b/Web/static/css/audios.css
@@ -549,6 +549,7 @@
 
 .playlistListView .playlistInfo .playlistName {
     font-weight: 600;
+    line-height: 12px;
 }
 
 .playlistListView .playlistInfo .playlistMeta, .playlistListView .playlistInfo .playlistMeta span {
