--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -382,6 +382,7 @@
 
         {ifset $thisUser}
             {script "js/al_notifs.js"}
+            {script "js/al_feed.js"}
         {/ifset}
 
         <script>bsdnHydrate();</script>
