--- a/Web/static/css/dialog.css
+++ b/Web/static/css/dialog.css
@@ -64,243 +64,147 @@ body.dimmed > .dimmer #absolute_territory {
     margin-left: 10px;
 }
 
+/* Modal player */
 
-/* fullscreen player */
-
-.ovk-fullscreen-player {
-    top: 9%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, 0%);
-    z-index: 6667;
-    position: absolute;
+.ovk-modal-player-window {
+    box-shadow: 0px 0px 9px 2px rgba(0, 0, 0, 0.2);
     width: 823px;
     min-height: 400px;
-    box-shadow: 0px 0px 9px 2px rgba(0, 0, 0, 0.2);
+    margin: 9vh auto 0 auto;
 }
 
-.top-part span {
+.ovk-modal-player-window #ovk-player-part {
+    height: 70vh;
+    background: black;
+    padding: 15px 20px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.ovk-modal-player-window #ovk-player-part .top-part {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.ovk-modal-player-window #ovk-player-part .top-part b {
     color: #515151;
-    font-size: 13px;
-    transition: color 200ms ease-in-out;
+    font-size: 12px;
 }
 
-.top-part .clickable:hover {
-    color: #ffffff;
+.ovk-modal-player-window #ovk-player-part .top-part .top-part-buttons, .ovk-modal-player-window #ovk-player-part .bottom-part {
+    color: #515151;
 }
 
-.ovk-fullscreen-player .bsdn_teaserTitleBox span {
-    color: unset;
-    font-size: unset;
+.ovk-modal-player-window #ovk-player-part .top-part .top-part-buttons a, .ovk-modal-player-window #ovk-player-part .bottom-part a {
+    color: #515151;
 }
 
-.ovk-fullscreen-player .bsdn-player {
-    max-width: 80%;
-    max-height: 350px;
-}
-
-.inner-player {
-    background: #000000;
-    min-height: 438px;
-    max-height: 439px;
-    position: relative;
-    padding-top: 11px;
-}
-
-.top-part-name {
-    font-size: 15px;
-    font-weight: bolder;
-    margin-left: 20px;
-    margin-top: 5px;
-}
-
-.top-part-buttons {
-    float: right;
-    margin-right: 20px;
-}
-
-.top-part-buttons span {
-    cursor: pointer;
-    user-select: none;
-}
-
-.fplayer {
-    text-align: center;
-    margin-top: 20px;
-}
-
-.top-part-bottom-buttons {
-    position: absolute;
-    margin-left: 20px;
-    bottom: 0;
-    margin-bottom: 20px;
-}
-
-.top-part-bottom-buttons span {
-    user-select: none;
-}
-
-.top-part .clickable {
-    cursor: pointer;
-}
-
-.bottom-part {
+.ovk-modal-player-window #ovk-player-info {
     display: none;
+}
+
+.ovk-modal-player-window #ovk-player-info.shown {
+    display: block;
+}
+
+.ovk-modal-player-window #ovk-player-info {
     background: white;
-    padding-bottom: 20px;
-    padding-top: 30px;
+    min-height: 200px;
+    padding: 5px 15px;
 }
 
-.left_block {
-    padding-left: 20px;
-    /*padding-top: 20px;*/
-    width: 75%;
-    float: left;
-    background: white;
-    padding-right: 6px;
-    max-height: 400px;
-    overflow-y: auto;
+.ovk-modal-player-window .media-page-wrapper-comments {
+    width: 100%;
 }
 
-.right_block {
-    padding-left: 10px;
-    /*padding-top: 20px;*/
-    width: 20%;
-    border-left: 1px solid gray;
-    float: right;
+.ovk-modal-player-window .center-part {
+    text-align: center;
+    height: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.bottom-part span {
-    font-size: 13px;
-}
-
-.bottom-part .gray {
+.ovk-modal-player-window .center-part .gray {
     color: gray;
 }
 
-.ovk-fullscreen-dimmer {
-    /* спижжено у пулла с несколькими картинками там где просмотрщик фоток */
-    position: fixed;
-    left: 0px;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    overflow: auto;
-    padding-bottom: 20px;
-    z-index: 300;
-}
-
-.v_author {
-    margin-top: 20px;
+.ovk-modal-player-window .center-part .bsdn, .ovk-modal-player-window .center-part .bsdn-player {
+    height: 100%;
+    width: 100%;
 }
 
 .miniplayer {
     position: absolute;
-    top:0;
-    background: rgba(54, 54, 54, 0.9);
+    background: rgba(54, 54, 54, 0.95);
     border-radius: 3px;
     min-width: 299px;
     min-height: 192px;
-    padding-top: 3px;
-    z-index: 9999;
+    z-index: 7777;
+    padding: 2px 7px;
+    display: flex;
+    flex-direction: column;
 }
 
-.miniplayer .bsdn-player {
-    max-height: 150px;
+.miniplayer .miniplayer-head {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.miniplayer .fplayer {
-    max-width: 286px;
-    margin-left: 6px;
-    margin-top: 10px;
-}
-
-.miniplayer-actions {
-    float: right;
-    margin-right: 8px;
-    margin-top: 4px;
-}
-
-.miniplayer-name {
-    color: #8a8a8a;
-    font-size: 14px;
-    margin-left: 7px;
-    margin-top: -6px;
-    font-weight: bolder;
+.miniplayer .miniplayer-head b {
+    color: white;
     user-select: none;
 }
 
-.ui-draggable {
-    position:fixed !important;
+.miniplayer .miniplayer-head .miniplayer-head-buttons {
+    display: flex;
+    align-items: center;
+    gap: 4px;
 }
 
-.miniplayer-actions img {
-    max-width: 11px;
+.miniplayer .miniplayer-head .miniplayer-head-buttons div {
+    width: 16px;
+    height: 16px;
+    background: url(/assets/packages/static/openvk/img/wall.png) no-repeat 1px 0;
+    background-repeat: no-repeat;
+    opacity: 0.5;
     cursor: pointer;
-    transition: opacity 200ms ease-in-out;
-    opacity: 70%;
 }
 
-.miniplayer .fplayer iframe {
-    max-width: 260px;
-    max-height: 160px;
+.miniplayer .miniplayer-head .miniplayer-head-buttons div:hover {
+    opacity: 1;
 }
 
-.miniplayer-actions img:hover {
-    opacity: 100%;
+.miniplayer .miniplayer-head .miniplayer-head-buttons #__miniplayer_return {
+    background-position: -28px 0px;
 }
 
-#vidComments {
-    margin-top: 10px;
+.miniplayer .miniplayer-head .miniplayer-head-buttons #__miniplayer_close {
+    background-position: -12px 0px;
 }
 
-.showMoreComments {
-    background: #eaeaea;
-    cursor: pointer;
-    text-align: center;
-    padding: 10px;
-    user-select: none;
-    margin-top: 10px;
+.miniplayer .miniplayer-head-buttons {
+    height: 20px;
 }
 
-.loader {
-    display: none;
-    position: fixed;
-    top: -10%;
-    background: rgba(26, 26, 26, 0.9);;
-    padding-top: 12px;
-    width: 91px;
-    height: 25px;
-    text-align: center;
-    border-radius: 1px;
-    margin: auto;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 5555;
+.miniplayer .miniplayer-body {
+    height: 100%;
 }
 
-.right-arrow, .left-arrow {
-    position: absolute;
-    cursor: pointer;
-    transition: all 200ms ease-in-out;
-    margin-left: -50px;
-    background: none;
-    height: 449px;
-    width: 57px;
-    user-select: none;
+.miniplayer .miniplayer-body .bsdn {
+    height: 100%;
 }
 
-.right-arrow img, .left-arrow img {
-    user-select: none;
-    opacity: 5%;
-    transition: all 200ms ease-in-out;
+.miniplayer .miniplayer-body .bsdn .bsdn-player {
+    height: 100%;
 }
 
-.right-arrow:hover, .left-arrow:hover {
-    background: rgba(0, 0, 0, 0.5);
-}
-
-.right-arrow img:hover, .left-arrow img:hover {
-    opacity: 50%;
+.miniplayer .miniplayer-body iframe {
+    width: 100%;
+    height: 100%;
 }
